<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/accent_indago"


    android:orientation="vertical"
    tools:context=".ui.LoginActivity">


    <LinearLayout
        android:layout_width="85dp"
        android:orientation="horizontal"
        android:id="@+id/suitcasee"
        android:background="@mipmap/suitcase"
        android:layout_marginBottom="4dp"
        android:layout_height="79dp">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/arc"
        android:gravity="center"
        android:layout_height="wrap_content">



        <EditText
            android:id="@+id/emaileditText"
            android:hint="@string/email"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/blk"
            android:ems="10"
            android:textColorHint="@color/blk"
            android:inputType="textPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/passeditText"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textColor="@color/blk"
            android:ems="10"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Password"
            android:textColorHint="@color/blk"

            />
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:text="Login"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button"/>


        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            />

        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textStyle="bold"
                android:textColor="@color/blk"
                android:text="@string/donotaccount"
               />
        <TextView
            android:id="@+id/fbdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:visibility="gone"

            android:textColor="@color/blk"
            android:text="data from FB"
            />




    </LinearLayout>
</LinearLayout>