<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/arc"
    android:layout_margin="30dp"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signup_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203"
        android:src="@mipmap/suitcase"
        />

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/arc"-->
<!--        app:layout_constraintBottom_toTopOf="@id/alreadyAccount"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/logo" />-->
<!--    -->

    <TextView
        android:id="@+id/signup_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/signup"
        android:textColor="@color/blk"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:textColor="@color/blk"
        android:textColorHint="@color/blk"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/username"
        app:layout_constraintEnd_toEndOf="@+id/signup_account"
        app:layout_constraintStart_toStartOf="@+id/signup_account"
        app:layout_constraintTop_toBottomOf="@id/signup_account"
        app:layout_constraintVertical_bias="0.75" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/blk"
        android:textColorHint="@color/blk"
        android:gravity="center"

        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/paassword"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <EditText
        android:id="@+id/paassword"
        android:layout_width="wrap_content"
        android:textColor="@color/blk"
        android:textColorHint="@color/blk"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/Re_type_pass"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <EditText
        android:id="@+id/Re_type_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textColor="@color/blk"
        android:textColorHint="@color/blk"
        android:gravity="center"
        android:hint="@string/retype_pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/checkBox"
        app:layout_constraintEnd_toEndOf="@+id/paassword"
        app:layout_constraintStart_toStartOf="@+id/paassword"
        app:layout_constraintTop_toBottomOf="@id/paassword" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/terms_conditions"
        android:textColor="@color/blk"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/Signup_button"
        app:layout_constraintEnd_toEndOf="@+id/Re_type_pass"
        app:layout_constraintStart_toStartOf="@+id/Re_type_pass"
        app:layout_constraintTop_toBottomOf="@+id/Re_type_pass" />

    <Button
        android:id="@+id/Signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="Sign Up"
        android:textColor="@color/color_icons"
        app:layout_constraintBottom_toTopOf="@id/alreadyAccount"
        app:layout_constraintEnd_toEndOf="@+id/Re_type_pass"
        app:layout_constraintStart_toStartOf="@+id/Re_type_pass"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/alreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="156dp"
        android:text="@string/already_account"
        android:textStyle="bold"

        android:textColor="@color/blk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Re_type_pass"
        app:layout_constraintStart_toStartOf="@+id/Re_type_pass"
        app:layout_constraintTop_toBottomOf="@id/Signup_button"
        app:layout_constraintVertical_bias="0.576" />

</androidx.constraintlayout.widget.ConstraintLayout>
